--- a/app/page.module.css
+++ b/app/page.module.css
@@ -1,6 +1,3 @@
-.container {
-  padding: 0 2rem;
-}
 
 .main {
   height: 70vh;
